规范模块